--- a/website/style.css
+++ b/website/style.css
@@ -23,7 +23,7 @@ body{
 .entry{
     background: rgba(59, 74, 107, .4);
 }
-
+/*
 #entryHolder{
 
 }
@@ -45,7 +45,7 @@ body{
 }
 .title{
 
-}
+} */
 
 /*  Basic Styling To Override Default For Basic HTML Elements */
 label{
@@ -92,20 +92,20 @@ button:focus {
     outline: none;
 }
 /* Style for Placeholder Text*/
-::placeholder { /* Firefox, Chrome, Opera */ 
-    color: #f0d43a; 
+::placeholder { /* Firefox, Chrome, Opera */
+    color: #f0d43a;
     font-family: 'Oswald', sans-serif;
 
-} 
-  
-:-ms-input-placeholder { /* Internet Explorer 10-11 */ 
-    color: #f0d43a; 
+}
+
+:-ms-input-placeholder { /* Internet Explorer 10-11 */
+    color: #f0d43a;
     font-family: 'Oswald', sans-serif;
 
-} 
-  
-::-ms-input-placeholder { /* Microsoft Edge */ 
-    color: #f0d43a; 
+}
+
+::-ms-input-placeholder { /* Microsoft Edge */
+    color: #f0d43a;
     font-family: 'Oswald', sans-serif;
 
-} 
+}
